--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,54 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>to-do list</title>
+
+    <div class="main-container">
+      <div class="sidebar">
+        <div class="upper-sidebar">
+          <div class="sidebar-options">
+            <div class="sidebar-title">to-do list</div>
+
+            <span class="icon"></span>
+          </div>
+          <button class="sidebar-item add-task">
+            <div class="icon">arrow_back</div>
+            Add task
+          </button>
+          <button class="sidebar-item">
+            <div class="icon">arrow_back</div>
+            Search
+          </button>
+
+          <button class="sidebar-item">
+            <div class="icon">arrow_back</div>
+            All Tasks
+          </button>
+          <button class="sidebar-item">
+            <div class="icon">arrow_back</div>
+            Today
+          </button>
+          <button class="sidebar-item">
+            <div class="icon">arrow_back</div>
+            Overdue
+          </button>
+        </div>
+
+        <div class="lower-sidebar">
+          <div class="projects-title">My Projects</div>
+          <div class="projects-container">
+            <div class="projects-item">
+              <div class="icon"></div>
+              <div class="title">Getting Started</div>
+
+              <div class="right-option"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="main-content"></div>
+    </div>
   </head>
   <body></body>
 </html>
