Updated styling for sidebar

--- a/src/template.html
+++ b/src/template.html
@@ -7,46 +7,63 @@
 
     <div class="main-container">
       <div class="sidebar">
-        <div class="upper-sidebar">
+        <div class="sidebar-upper">
           <div class="sidebar-options">
+            <span class="icon left">brush</span>
             <div class="sidebar-title">to-do list</div>
 
-            <span class="icon"></span>
+            <button class="icon right">view_sidebar</button>
           </div>
           <button class="sidebar-item add-task">
-            <div class="icon">arrow_back</div>
-            Add task
-          </button>
-          <button class="sidebar-item">
-            <div class="icon">arrow_back</div>
-            Search
+            <div class="icon">add_circle</div>
+            <p>Add task</p>
           </button>
 
           <button class="sidebar-item">
             <div class="icon">arrow_back</div>
-            All Tasks
+            <p>All Tasks</p>
           </button>
           <button class="sidebar-item">
-            <div class="icon">arrow_back</div>
-            Today
+            <div class="icon">calendar_today</div>
+            <p>Today</p>
           </button>
           <button class="sidebar-item">
-            <div class="icon">arrow_back</div>
-            Overdue
+            <div class="icon">calendar_month</div>
+            <p>Overdue</p>
           </button>
         </div>
 
-        <div class="lower-sidebar">
+        <div class="sidebar-lower">
           <div class="projects-title">My Projects</div>
           <div class="projects-container">
-            <div class="projects-item">
-              <div class="icon"></div>
+            <button class="project-item">
+              <span class="icon">tag</span>
               <div class="title">Getting Started</div>
 
               <div class="right-option"></div>
-            </div>
+            </button>
+
+            <!--  -->
+
+            <button class="project-item">
+              <span class="icon">tag</span>
+              <div class="title">Getting Started</div>
+
+              <div class="right-option"></div>
+            </button>
+
+            <button class="project-item">
+              <span class="icon">tag</span>
+              <div class="title">Getting Started</div>
+
+              <div class="right-option"></div>
+            </button>
+
+            <!--  -->
           </div>
         </div>
+
+        <div class="sidebar-footer">Made by eggtoast</div>
       </div>
 
       <div class="main-content"></div>
