Add initial classes and methods for projects and todolist

--- a/src/template.html
+++ b/src/template.html
@@ -22,6 +22,8 @@
           <button class="sidebar-item">
             <div class="icon">arrow_back</div>
             <p>All Tasks</p>
+
+            <p class="number-of-tasks">0</p>
           </button>
           <button class="sidebar-item">
             <div class="icon">calendar_today</div>
@@ -55,8 +57,6 @@
             <button class="project-item">
               <span class="icon">tag</span>
               <div class="title">Getting Started</div>
-
-              <div class="right-option"></div>
             </button>
 
             <!--  -->
@@ -66,7 +66,11 @@
         <div class="sidebar-footer">Made by eggtoast</div>
       </div>
 
-      <div class="main-content"></div>
+      <div class="main-content">
+        <!-- PROJECTS -->
+
+        <!-- PROJECTS -->
+      </div>
     </div>
   </head>
   <body></body>
