Included priority colors in checkbox when the pages renders & split files for modularization

--- a/src/template.html
+++ b/src/template.html
@@ -212,7 +212,7 @@
     </div>
 
     <dialog class="add-task-dialog">
-      <form class="dialog-content">
+      <form class="add-task-dialog-content">
         <input type="text" placeholder="Enter Title" class="add-task-title" />
 
         <textarea
@@ -223,11 +223,11 @@
         <div class="add-task-buttons">
           <div class="options-wrapper">
             <input type="date" />
-            <select>
+            <select id="add-task-dialog-projects">
               <option value="projects">Projects</option>
               <option value="projects">Projects1</option>
             </select>
-            <select>
+            <select id="add-task-dialog-priority">
               <option value="priority">None</option>
               <option value="priority">Low</option>
               <option value="priority">Medium</option>
