Add delete button to tasks

--- a/src/template.html
+++ b/src/template.html
@@ -169,6 +169,10 @@
                   <button class="task-edit">
                     <span class="icon">edit_note</span>
                   </button>
+
+                  <button class="task-delete">
+                    <span class="icon">delete</span>
+                  </button>
                 </div>
                 <div class="task-description">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
