User can now delete tasks from any project

--- a/src/template.html
+++ b/src/template.html
@@ -65,6 +65,18 @@
               <div class="title">Getting Started</div>
             </button>
 
+            <button class="project-item project-form">
+              <span class="icon">tag</span>
+              <form class="sidebar-form">
+                <input
+                  type="text"
+                  id="sidebar-project-name"
+                  placeholder="Project Name"
+                  class="title"
+                />
+              </form>
+            </button>
+
             <!--  -->
           </div>
         </div>
