Project form pops up in sidebar and is canceable & fix styling

--- a/src/template.html
+++ b/src/template.html
@@ -48,7 +48,9 @@
               <span class="icon">tag</span>
               <div class="title">Getting Started</div>
 
-              <div class="right-option"></div>
+              <div class="right-option">
+                <span class="icon">edit</span>
+              </div>
             </button>
 
             <!--  -->
@@ -71,10 +73,14 @@
                 <input
                   type="text"
                   id="sidebar-project-name"
-                  placeholder="Project Name"
+                  placeholder="New Project Name"
                   class="title"
                 />
               </form>
+
+              <div class="right-option">
+                <span class="icon project-cancel">cancel</span>
+              </div>
             </button>
 
             <!--  -->
