User can now add projects, and add tasks to those created projects with the dialog.

--- a/src/template.html
+++ b/src/template.html
@@ -69,7 +69,7 @@
 
             <button class="project-item project-form">
               <span class="icon">tag</span>
-              <form class="sidebar-form">
+              <form class="sidebar-form" name="sidebar">
                 <input
                   type="text"
                   id="sidebar-project-name"
