Add styling to task edit form

--- a/src/template.html
+++ b/src/template.html
@@ -214,6 +214,7 @@
                 type="text"
                 placeholder="Enter Title"
                 id="edit-task-title"
+                contenteditable
               />
 
               <textarea
@@ -222,7 +223,7 @@
               ></textarea>
 
               <div class="task-options">
-                <input type="date" />
+                <input type="date" id="edit-task-date" />
                 <select id="edit-task-priority">
                   <option value="none">No priority</option>
                   <option value="priority-color-low">Low</option>
