--- a/src/template.html
+++ b/src/template.html
@@ -49,6 +49,7 @@
               <div class="title">Getting Started</div>
 
               <div class="right-option">
+                <span class="number-of-tasks">0</span>
                 <span class="icon">edit</span>
               </div>
             </button>
