User can now rename project pages by pressing [enter], and cancel by pressing the x icon - Moved event handling on editing projects from event.js to ui-handlers.js since forms can appear from pressing on any project sidebar tab - Project tab creation now deals with cases if 1. We're renaming a existing project, 2. We're adding a new project

--- a/src/template.html
+++ b/src/template.html
@@ -50,7 +50,7 @@
 
               <div class="right-option">
                 <span class="number-of-tasks">0</span>
-                <span class="icon">edit</span>
+                <span class="icon edit">edit</span>
               </div>
             </button>
 
