Fix form validation for adding a task Dialog now checks if user did not give required inputs

--- a/src/template.html
+++ b/src/template.html
@@ -262,7 +262,7 @@
 
         <div class="add-task-buttons">
           <div class="options-wrapper">
-            <input type="date" id="add-task-dialog-date" />
+            <input type="date" id="add-task-dialog-date" required />
             <select id="add-task-dialog-projects">
               <option value="projects">Projects</option>
               <option value="projects">Projects1</option>
@@ -275,8 +275,8 @@
             </select>
           </div>
           <div class="button-wrapper">
-            <button class="cancel-add-task">Cancel</button>
-            <button class="submit-add-task">Submit</button>
+            <button class="cancel-add-task" type="button">Cancel</button>
+            <button class="submit-add-task" type="submit">Submit</button>
           </div>
         </div>
       </form>
