When user hovers over a circle checkmark, a check icon appears

--- a/src/template.html
+++ b/src/template.html
@@ -103,7 +103,7 @@
         <div class="project-content">
           <div class="task-container">
             <div class="task-item">
-              <button class="checkmark"></button>
+              <button class="checkmark"><span class="icon">check</span></button>
 
               <div class="task-texts">
                 <div class="task-header">
