--- a/src/template.html
+++ b/src/template.html
@@ -20,17 +20,17 @@
             <p>Add task</p>
           </button>
 
-          <button class="sidebar-item">
+          <button class="sidebar-item all-tasks-page">
             <div class="icon">arrow_back</div>
             <p>All Tasks</p>
 
             <p class="number-of-tasks">0</p>
           </button>
-          <button class="sidebar-item">
+          <button class="sidebar-item today-page">
             <div class="icon">calendar_today</div>
             <p>Today</p>
           </button>
-          <button class="sidebar-item">
+          <button class="sidebar-item overdue-page">
             <div class="icon">calendar_month</div>
             <p>Overdue</p>
           </button>
