Fix no priority checkmark's styling and turned all update ui tasks into a single method

--- a/src/template.html
+++ b/src/template.html
@@ -95,8 +95,7 @@
         <!-- PROJECTS -->
 
         <div class="header">
-          <!-- <button class="sort">Sort</button>
-          <button class="filter">Filter</button> -->
+          <!-- <button class="night-mode">Night Mode</button> -->
         </div>
         <div class="project-title">Project Name 🌟</div>
 
