Date text now changes color and text depending if its past due, yesterday, or today

--- a/src/template.html
+++ b/src/template.html
@@ -6,8 +6,8 @@
     <title>to-do list</title>
   </head>
   <body>
-    <div class="main-container">
-      <div class="sidebar">
+    <div class="main-container" id="one">
+      <div class="sidebar" id="hidden">
         <div class="sidebar-upper">
           <div class="sidebar-options">
             <span class="icon left">brush</span>
