--- a/src/template.html
+++ b/src/template.html
@@ -22,18 +22,18 @@
 
           <button class="sidebar-item all-tasks-page">
             <div class="icon">arrow_back</div>
-            <p>All Tasks</p>
+            <p class="all-tasks-title">All Tasks</p>
 
             <p class="all-number-of-tasks">0</p>
           </button>
           <button class="sidebar-item today-page">
             <div class="icon">calendar_today</div>
-            <p>Today</p>
+            <p class="today-title">Today</p>
             <p class="today-number-of-tasks">0</p>
           </button>
           <button class="sidebar-item overdue-page">
             <div class="icon">calendar_month</div>
-            <p>Overdue</p>
+            <p class="overdue-title">Overdue</p>
             <p class="overdue-number-of-tasks">0</p>
           </button>
         </div>
@@ -84,13 +84,15 @@
               <div class="right-option">
                 <span class="icon project-cancel">cancel</span>
               </div>
+
+              <div class="icon project-delete">delete</div>
             </button>
 
             <!--  -->
           </div>
         </div>
 
-        <div class="sidebar-footer">Made by eggtoast</div>
+        <!-- <div class="sidebar-footer">Made by eggtoast</div> -->
       </div>
 
       <div class="main-content">
