--- a/src/template.html
+++ b/src/template.html
@@ -92,7 +92,9 @@
           </div>
         </div>
 
-        <!-- <div class="sidebar-footer">Made by eggtoast</div> -->
+        <div class="sidebar-footer">
+          Made by <a href="https://github.com/eggtoasts">eggtoasts</a>
+        </div>
       </div>
 
       <div class="main-content">
@@ -177,6 +179,7 @@
           placeholder="Enter Title*"
           id="add-task-dialog-title"
           required
+          maxlength="100"
         />
 
         <textarea
